--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Space</title>
+  <title>🌖 Beyond Lunar - Number One Space News Site</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles.css">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -32,13 +32,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item space-nav-items">
-              <a class="nav-link active" aria-current="page" href="#">Launches</a>
+              <a id="time-button" class="nav-link active" aria-current="page" href="#">00:00:00</a>
             </li>
             <li class="nav-item space-nav-items">
-              <a id="articles-button" class="nav-link" href="#">Articles</a>
+              <a id="articles-button" class="nav-link active" aria-current="page" href="#">Articles</a>
             </li>
             <li class="nav-item space-nav-items">
-              <a class="nav-link" href="#">Events</a>
+              <a id="reports-button" class="nav-link" href="#">Reports</a>
+            </li>
+            <li class="nav-item space-nav-items">
+              <a id="launches-button" class="nav-link" href="#">Upcoming Launches</a>
             </li>
             <li class="nav-item space-nav-items">
               <a id="blogs-button" class="nav-link" href="#">Blogs</a>
@@ -232,8 +235,23 @@
     </div>
   </div>
 
-  <div style="float:right; overflow: hidden; padding:1rem;">
-    <a class="twitter-timeline" data-lang="en" data-width="550" data-height="1800" data-theme="dark"
+  <div style="float:right; overflow: visible; padding:1rem;">
+    
+    <div class="dropdown" style="overflow:visible; z-index: 1; bottom:1rem; padding-top:1rem;">
+      <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+        Choose an Agency
+      </button>
+      <ul class="dropdown-menu" style="overflow:visible;" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" style="overflow:visible;" href="#">Choose an Agency</a></li>
+        <li><a class="dropdown-item" style="overflow:visible;" href="#">NASA</a></li>
+        <li><a class="dropdown-item" style="overflow:visible;" href="#">CNSA</a></li>
+        <li><a class="dropdown-item" style="overflow:visible;" href="#">JAXA</a></li>
+        <li><a class="dropdown-item" style="overflow:visible;" href="#">ISRO</a></li>
+        <li><a class="dropdown-item" style="overflow:visible;" href="#">ESA</a></li>
+        <li><a class="dropdown-item" style="overflow:visible;" href="#">RFSA</a></li>
+      </ul>
+    </div>
+    <a style="z-index:0;"class="twitter-timeline" data-lang="en" data-width="550" data-height="1800" data-theme="dark"
       href="https://twitter.com/NASA?ref_src=twsrc%5Etfw">Tweets by NASA</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
@@ -351,6 +369,8 @@
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div> -->
+  <script type="text/javascript" src="Scripts/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="./bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
