added twitter urls to the JS file

--- a/index.html
+++ b/index.html
@@ -238,137 +238,24 @@
   <div style="float:right; overflow: visible; padding:1rem;">
     
     <div class="dropdown" style="overflow:visible; z-index: 1; bottom:1rem; padding-top:1rem;">
-      <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+      <button id="twitter-button" class="btn btn-secondary dropdown-toggle btn-dark" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
         Choose an Agency
       </button>
-      <ul class="dropdown-menu" style="overflow:visible;" aria-labelledby="dropdownMenuButton1">
+      <ul id="twitter-dropdown" class="dropdown-menu" style="overflow:visible;" aria-labelledby="dropdownMenuButton1">
         <li><a class="dropdown-item" style="overflow:visible;" href="#">Choose an Agency</a></li>
         <li><a class="dropdown-item" style="overflow:visible;" href="#">NASA</a></li>
         <li><a class="dropdown-item" style="overflow:visible;" href="#">CNSA</a></li>
         <li><a class="dropdown-item" style="overflow:visible;" href="#">JAXA</a></li>
         <li><a class="dropdown-item" style="overflow:visible;" href="#">ISRO</a></li>
         <li><a class="dropdown-item" style="overflow:visible;" href="#">ESA</a></li>
-        <li><a class="dropdown-item" style="overflow:visible;" href="#">RFSA</a></li>
+        <li><a class="dropdown-item" style="overflow:visible;" href="#">Roscosmos</a></li>
       </ul>
     </div>
-    <a style="z-index:0;"class="twitter-timeline" data-lang="en" data-width="550" data-height="1800" data-theme="dark"
+    <a id="twitter-url" style="z-index:0;"class="twitter-timeline" data-lang="en" data-width="550" data-height="1800" data-theme="dark"
       href="https://twitter.com/NASA?ref_src=twsrc%5Etfw">Tweets by NASA</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
-  <!-- <div class="row headlines">
-
-    <div class="col-lg-9">
-      <div class="card-group">
-        <div class="card">
-          <img id="card-one-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 id="card-one-title" class="card-title">Card title</h5>
-            <p id="card-one-desc" class="card-text">This is a wider card with supporting text below as a natural lead-in
-              to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small id="card-one-date" class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-        <div class="card">
-          <img id="card-two-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 id="card-two-title" class="card-title">Card title</h5>
-            <p id="card-two-desc" class="card-text">This card has supporting text below as a natural lead-in to
-              additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small id="card-one-date" class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-        <div class="card">
-          <img id="card-three-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-      <div class="card-group">
-        <div class="card">
-          <img id="card-four-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-        <div class="card">
-          <img id="card-five-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-        <div class="card">
-          <img id="card-six-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-      <div class="card-group">
-        <div class="card">
-          <img id="card-seven-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-        <div class="card">
-          <img id="card-eight-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-        <div class="card">
-          <img id="card-nine-image" src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-sm-12 twitter-feed">
-      <a class="twitter-timeline" data-lang="en" data-width="400" data-height="700" data-theme="dark"
-        href="https://twitter.com/NASA?ref_src=twsrc%5Etfw">Tweets by NASA</a>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-  </div> -->
   <script type="text/javascript" src="Scripts/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="./bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
